force-app/main/default/objects/Project__c/fields/Actual_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Shipment_Date__c</fullName>
    <label>Actual Shipment Date</label>
    <type>Date</type>
</CustomField>