force-app/main/default/objects/Project__c/fields/Annual_Commercial_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commercial_Date__c</fullName>
    <label>Annual Commercial Date</label>
    <type>Date</type>
</CustomField>