force-app/main/default/objects/Project__c/fields/Annual_Commercial_Quantity_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commercial_Quantity_Price__c</fullName>
    <label>Annual Commercial Quantity Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>