force-app/main/default/objects/Project__c/fields/Annual_Commercial_Quantity_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commercial_Quantity_Value__c</fullName>
    <formula>Annual_Commercial_Quantity__c  *  Annual_Commercial_Quantity_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Commercial Quantity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>