force-app/main/default/objects/Project__c/fields/Change_Notification_2_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>Change_Notification_2_Pre_Reg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Notification – 2</label>
    <type>Checkbox</type>
</CustomField>