force-app/main/default/objects/Project__c/fields/Change_Notification_3__c.field-meta.xml
<CustomField>
    <fullName>Change_Notification_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Notification - 3</label>
    <type>Checkbox</type>
</CustomField>