force-app/main/default/objects/Project__c/fields/Commercial_Order_Received__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Order_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Order Received</label>
    <type>Checkbox</type>
</CustomField>