force-app/main/default/objects/Project__c/fields/Complete_Quantity_Dispatch_Date_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>Complete_Quantity_Dispatch_Date_Pre_Reg__c</fullName>
    <label>Complete Quantity Dispatch Date</label>
    <type>Date</type>
</CustomField>