force-app/main/default/objects/Project__c/fields/Customer_Project_Manger__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project_Manger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Project Manger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>