force-app/main/default/objects/Project__c/fields/Date_of_customer_regulatory_approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_customer_regulatory_approval__c</fullName>
    <label>Date of customer/regulatory approval</label>
    <type>Date</type>
</CustomField>