force-app/main/default/objects/Project__c/fields/Date_of_Customer_submissions_to_Agency__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Customer_submissions_to_Agency__c</fullName>
    <label>Date of Customer submissions to Agency</label>
    <type>Date</type>
</CustomField>