force-app/main/default/objects/Project__c/fields/Date_of_first_commercial_order_by_Custom__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_commercial_order_by_Custom__c</fullName>
    <label>Date of first commercial order by Custom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>