force-app/main/default/objects/Project__c/fields/Date_of_LOA_submission_by_Shri_Krishna_P__c.field-meta.xml
<CustomField>
    <fullName>Date_of_LOA_submission_by_Shri_Krishna_P__c</fullName>
    <label>Date of LOA submission by Shri Krishna P</label>
    <type>Date</type>
</CustomField>