force-app/main/default/objects/Project__c/fields/Development_Quantity_Date__c.field-meta.xml
<CustomField>
    <fullName>Development_Quantity_Date__c</fullName>
    <label>Development Quantity Date</label>
    <type>Date</type>
</CustomField>