force-app/main/default/objects/Project__c/fields/Development_Quantity_Price__c.field-meta.xml
<CustomField>
    <fullName>Development_Quantity_Price__c</fullName>
    <label>Development Quantity Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>