force-app/main/default/objects/Project__c/fields/Development_Quantity_Value__c.field-meta.xml
<CustomField>
    <fullName>Development_Quantity_Value__c</fullName>
    <formula>Development_Quantity__c  *  Development_Quantity_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Quantity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>