force-app/main/default/objects/Project__c/fields/Development_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Development_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Development Shipped</label>
    <type>Checkbox</type>
</CustomField>