force-app/main/default/objects/Project__c/fields/Documents_Shared__c.field-meta.xml
<CustomField>
    <fullName>Documents_Shared__c</fullName>
    <label>Documents Shared</label>
    <type>TextArea</type>
</CustomField>