force-app/main/default/objects/Project__c/fields/End_Market__c.field-meta.xml
<CustomField>
    <fullName>End_Market__c</fullName>
    <label>End Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>End_Market_Picklist</valueSetName>
    </valueSet>
</CustomField>