force-app/main/default/objects/Project__c/fields/Exhibit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Quantity__c</fullName>
    <label>Exhibit Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>