force-app/main/default/objects/Project__c/fields/Exhibit_Quantity_Date__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Quantity_Date__c</fullName>
    <label>Exhibit Quantity Date</label>
    <type>Date</type>
</CustomField>