force-app/main/default/objects/Project__c/fields/Exhibit_Quantity_Price__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Quantity_Price__c</fullName>
    <label>Exhibit Quantity Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>