force-app/main/default/objects/Project__c/fields/Exhibit_Quantity_UOM__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Quantity_UOM__c</fullName>
    <label>Exhibit Quantity UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Mg</fullName>
            </value>
            <value>
                <fullName>Grams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>