force-app/main/default/objects/Project__c/fields/Exhibit_Quantity_Value__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Quantity_Value__c</fullName>
    <formula>Exhibit_Quantity__c  *  Exhibit_Quantity_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibit Quantity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>