force-app/main/default/objects/Project__c/fields/Exhibit_Requirement_Order_Received__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Requirement_Order_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit Requirement Order Received</label>
    <type>Checkbox</type>
</CustomField>