force-app/main/default/objects/Project__c/fields/Expected_Delivery_Date_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date_by_Customer__c</fullName>
    <label>Expected Delivery Date by Customer</label>
    <type>Date</type>
</CustomField>