force-app/main/default/objects/Project__c/fields/Expected_Delivery_Date_By_Customer_Pre_R__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date_By_Customer_Pre_R__c</fullName>
    <label>Expected Delivery Date By Customer</label>
    <type>Date</type>
</CustomField>