force-app/main/default/objects/Project__c/fields/Expected_Launch__c.field-meta.xml
<CustomField>
    <fullName>Expected_Launch__c</fullName>
    <label>Expected Launch</label>
    <type>Date</type>
</CustomField>