force-app/main/default/objects/Project__c/fields/Form_Grade__c.field-meta.xml
<CustomField>
    <fullName>Form_Grade__c</fullName>
    <label>Form / Grade</label>
    <type>TextArea</type>
</CustomField>