force-app/main/default/objects/Project__c/fields/LOA_Requested_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>LOA_Requested_Pre_Reg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOA Requested</label>
    <type>Checkbox</type>
</CustomField>