force-app/main/default/objects/Project__c/fields/No_Of_Batches_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Batches_Pre_Reg__c</fullName>
    <label>No. Of Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>