force-app/main/default/objects/Project__c/fields/Partial_Quantity_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Partial_Quantity_Dispatch_Date__c</fullName>
    <label>Partial Quantity Dispatch Date</label>
    <type>Date</type>
</CustomField>