force-app/main/default/objects/Project__c/fields/Partial_Quantity_Dispatch_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>Partial_Quantity_Dispatch_Pre_Reg__c</fullName>
    <label>Partial Quantity Dispatch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>