force-app/main/default/objects/Project__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>