force-app/main/default/objects/Project__c/fields/PO_Date_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>PO_Date_Pre_Reg__c</fullName>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>