force-app/main/default/objects/Project__c/fields/PO_Number_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_Pre_Reg__c</fullName>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>