force-app/main/default/objects/Project__c/fields/PO_Quantity_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>PO_Quantity_Pre_Reg__c</fullName>
    <label>PO Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>