force-app/main/default/objects/Project__c/fields/Pre_Registration_Received__c.field-meta.xml
<CustomField>
    <fullName>Pre_Registration_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Registration Received</label>
    <type>Checkbox</type>
</CustomField>