force-app/main/default/objects/Project__c/fields/Price_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>Price_Pre_Reg__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>