force-app/main/default/objects/Project__c/fields/price_slab1__c.field-meta.xml
<CustomField>
    <fullName>price_slab1__c</fullName>
    <label>price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>