force-app/main/default/objects/Project__c/fields/Quantity_pending__c.field-meta.xml
<CustomField>
    <fullName>Quantity_pending__c</fullName>
    <label>Quantity pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>