force-app/main/default/objects/Project__c/fields/Quantity_slab2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_slab2__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>