force-app/main/default/objects/Project__c/fields/Regulatory_Submission__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regulatory Submission</label>
    <type>Checkbox</type>
</CustomField>