force-app/main/default/objects/Project__c/fields/Remarks_2_Pri_Regi__c.field-meta.xml
<CustomField>
    <fullName>Remarks_2_Pri_Regi__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>