force-app/main/default/objects/Project__c/fields/Remarks_Pre_Reg__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Pre_Reg__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>