force-app/main/default/objects/Project__c/fields/Reopen_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Comments__c</fullName>
    <label>Reopen Comments</label>
    <type>TextArea</type>
</CustomField>