force-app/main/default/objects/Project__c/fields/Slab_1__c.field-meta.xml
<CustomField>
    <fullName>Slab_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slab 1</label>
    <type>Checkbox</type>
</CustomField>