force-app/main/default/objects/Project__c/fields/Slab_2__c.field-meta.xml
<CustomField>
    <fullName>Slab_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slab 2</label>
    <type>Checkbox</type>
</CustomField>