force-app/main/default/objects/Project__c/fields/Slab_3__c.field-meta.xml
<CustomField>
    <fullName>Slab_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slab 3</label>
    <type>Checkbox</type>
</CustomField>