force-app/main/default/objects/Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development Stage</fullName>
            </value>
            <value>
                <fullName>Pre-Registration/Exhibit/Bio-Batch Stage</fullName>
            </value>
            <value>
                <fullName>Registration / Regulatory Submission</fullName>
            </value>
            <value>
                <fullName>Commercial Stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>