force-app/main/default/objects/Project__c/fields/Supply_Agreement_End_date__c.field-meta.xml
<CustomField>
    <fullName>Supply_Agreement_End_date__c</fullName>
    <label>Supply Agreement End date</label>
    <type>Date</type>
</CustomField>