force-app/main/default/objects/Project__c/fields/Supply_Agreement_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Supply_Agreement_Start_date__c</fullName>
    <label>Supply Agreement Start date</label>
    <type>Date</type>
</CustomField>