force-app/main/default/objects/Project__c/fields/Technical_documents_shared__c.field-meta.xml
<CustomField>
    <fullName>Technical_documents_shared__c</fullName>
    <label>Technical documents shared</label>
    <type>TextArea</type>
</CustomField>