force-app/main/default/objects/Project__c/fields/UOM_comm__c.field-meta.xml
<CustomField>
    <fullName>UOM_comm__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Mg</fullName>
            </value>
            <value>
                <fullName>Grams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>