force-app/main/default/objects/Project__c/fields/Validation_on__c.field-meta.xml
<CustomField>
    <fullName>Validation_on__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation on</label>
    <type>Checkbox</type>
</CustomField>