force-app/main/default/objects/Project__c/recordTypes/registration.recordType-meta.xml
<RecordType>
    <fullName>registration</fullName>
    <active>true</active>
    <label>registration</label>
</RecordType>