force-app/main/default/objects/Project__c/validationRules/Stage_Update_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Update_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Validation_on__c  = true</errorConditionFormula>
    <errorMessage>You are not able to go next Stage</errorMessage>
</ValidationRule>