force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Name__c</columns>
    <columns>End_Market__c</columns>
    <columns>Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>